--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  http: ^0.13.4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -59,8 +59,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - boxpik_splash_image.png
-  #   - images/a_dot_ham.jpeg
+    - assets/images/boxpik_splash_image.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
